# review-parser

./: .env  .python-version  README.md  pyproject.toml  railway.json  requirements.txt
src/: __main__.py  gsheet.py  parsing.py
src/scrapper_project/: __init__.py
