[project]
name = "scrapper-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kirill", email = "unknown@domain.invalid" }
]
dependencies = [
    'pandas',
    'gspread',
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
